# 00-lambda

./: .gitignore  Main.hs  Makefile  README.md  Test.hs  config.json  hie.yaml  hw0-lambda.cabal  stack.yaml
.devcontainer/: .ghci  Dockerfile  devcontainer.json
.github/: CODEOWNERS  approveman.yml  dependabot.yml
.github/classroom/: autograding.json
.github/workflows/: classroom.yml  create.yml  docker-image.yml
tests/: 01_bool.lc  02_plus.lc  03_minus.lc
