name:                hw0-lambda
version:             0.1.0.0
synopsis:            Starter code for UCSC 114a homework/00-lambda
license:             MIT
license-file:        LICENSE
author:              Ranjit Jhala
maintainer:          jhala@cs.ucsd.edu
category:            Language
build-type:          Simple
cabal-version:       >=1.10

executable hw0
  build-depends:    base,
                    directory,
                    filepath,
                    process,
                    tasty,
                    tasty-hunit,
                    dequeue,
                    clock,
                    json,
                    elsa
  default-language: Haskell2010
  main-is:          Main.hs

test-suite test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  ghc-options:      -threaded
  main-is:          Main.hs
  build-depends:    base,
                    directory,
                    filepath,
                    process,
                    tasty,
                    tasty-hunit,
                    dequeue,
                    clock,
                    json,
                    elsa
